# LogiPack

./: .gitignore  ASSIGNMENT.md  Cargo.toml  IMPROVEMENTS.md  Makefile  README.md
.github/workflows/: ci.yml
logipack-core/crates/core-application/: Cargo.toml
logipack-core/crates/core-application/src/: actor.rs  lib.rs  roles.rs
logipack-core/crates/core-application/src/clients/: create.rs  delete.rs  get.rs  list.rs  update.rs
logipack-core/crates/core-application/src/employee_offices/: assign.rs  list.rs  mod.rs  remove.rs
logipack-core/crates/core-application/src/employees/: create.rs  delete.rs  get.rs  list.rs  update.rs
logipack-core/crates/core-application/src/offices/: create.rs  delete.rs  get.rs  list.rs  update.rs
logipack-core/crates/core-application/src/shipments/: change_status.rs  create.rs  (+4 more)
logipack-core/crates/core-application/tests/: clients_usecases.rs  employee_offices_usecases.rs  employees_usecases.rs  offices_usecases.rs  shipments_usecases.rs
logipack-core/crates/core-contracts/: Cargo.toml
logipack-core/crates/core-data/: Cargo.toml
logipack-core/crates/core-data/migration/: Cargo.toml
logipack-core/crates/core-data/tests/: employee_offices_repo.rs  employees_repo.rs  shipments_repo.rs
logipack-core/crates/core-domain/: Cargo.toml
logipack-core/crates/core-domain/src/: errors.rs  lib.rs
logipack-core/crates/core-eventstore/: Cargo.toml
logipack-core/crates/core-eventstore/migration/: Cargo.toml
logipack-core/crates/core-eventstore/migration/src/: lib.rs  m2026_01_13_eventstore.rs
logipack-core/crates/core-eventstore/src/: hashing.rs  lib.rs
logipack-core/crates/core-eventstore/src/adapter/: append.rs  events.rs  mod.rs  read.rs  shipments.rs  streams.rs
logipack-core/crates/core-eventstore/src/schema/: mod.rs  packages.rs  streams.rs
logipack-core/crates/core-eventstore/tests/: append_rules.rs  determinism.rs
logipack-core/crates/test-infra/: Cargo.toml
logipack-core/crates/test-infra/src/: lib.rs
logipack-hub/hub-api/: .env.example  .gitignore  Cargo.toml  Makefile
logipack-hub/hub-api/src/: actor_extractor.rs  app.rs  config.rs  dev_secret.rs  error.rs  lib.rs  main.rs  migrate.rs  policy.rs  state.rs
logipack-hub/hub-api/src/auth/: claims.rs  jwks.rs  middleware.rs  mod.rs
logipack-hub/hub-api/src/dto/: clients.rs  employee_offices.rs  employees.rs  ensure_user.rs  me.rs  mod.rs  offices.rs  shipments.rs
logipack-hub/hub-api/src/routes/: admin.rs  auth_sub.rs  ensure_user.rs  health.rs  me.rs  mod.rs  shipments.rs
logipack-hub/hub-api/src/routes/admin_ep/: clients.rs  employee_offices.rs  employees.rs  mod.rs  offices.rs
logipack-hub/hub-api/tests/: admin_guard.rs  auth_actor.rs  auth_jwt.rs  clients.rs  employee_offices.rs  employees.rs  ensure_user.rs  helpers.rs  me.rs  offices.rs  shipments_create.rs  shipments_get.rs  shipments_timeline.rs
logipack-hub/hub-api/tests/clients/: clients_create.rs  clients_delete.rs  clients_get.rs  clients_list.rs  clients_update.rs
logipack-hub/hub-api/tests/employee_offices/: employee_offices_assign.rs  employee_offices_list.rs  employee_offices_remove.rs
logipack-hub/hub-api/tests/employees/: employees_create.rs  employees_delete.rs  employees_get.rs  employees_list.rs  employees_update.rs
logipack-hub/hub-api/tests/ensure_user/: ensure_user_create.rs  ensure_user_email_linking.rs  ensure_user_idempotent.rs  ensure_user_unauthenticated.rs
logipack-hub/hub-api/tests/fixtures/: jwks.json  private.pem  public.pem
logipack-hub/hub-api/tests/me/: me_not_provisioned.rs  me_returns_role.rs
logipack-hub/hub-api/tests/offices/: offices_create.rs  offices_delete.rs  offices_get.rs  offices_list.rs  offices_update.rs
logipack-hub/hub-web/: .env.example  .gitignore  Makefile  README.md  package.json  tailwind.config.cjs  vite.config.ts
logipack-hub/hub-web/src/: +page.server.ts  app.css  app.d.ts  app.html  hooks.server.ts
logipack-hub/hub-web/src/lib/: time.ts
logipack-hub/hub-web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
logipack-hub/tmp/: 99-7816
specs/: northstar-v0-monorepo.md  northstar-v1-domain-db.md  northstar-v2-shipments-dev-auth.md  northstar-v3-auth0-roles-admin-crud.md  northstar-v4-reports-sql-diploma.md
(+154 files in other folders)
