[workspace]
resolver = "2"

members = [
  "logipack-core/crates/core-domain",
  "logipack-core/crates/core-application",
  "logipack-core/crates/core-data",
  "logipack-core/crates/core-data/migration",
  "logipack-core/crates/core-eventstore",
  "logipack-core/crates/core-eventstore/migration",
  "logipack-core/crates/core-contracts",
  "logipack-hub/hub-api",
]
