[package]
name = "hub-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

core-domain = { path = "../../logipack-core/crates/core-domain" }
core-application = { path = "../../logipack-core/crates/core-application" }
core-data = { path = "../../logipack-core/crates/core-data" }
core-eventstore = { path = "../../logipack-core/crates/core-eventstore" }
core-contracts = { path = "../../logipack-core/crates/core-contracts" }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
uuid = "1.19.0"

[dev-dependencies]
http-body-util = "0.1"
test-infra = { path = "../../logipack-core/crates/test-infra" }
